--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+            <li class="nav-item ">
+              <a class="nav-link active" href="#">Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Vocación</a>
+              <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Servicios</a>
+              <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="#">Contact</a>
             </li>
           </ul>
         </div>
@@ -82,28 +82,30 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-sm-8">
-          <h2 class="mt-4">Nuestra vocación:</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
+        <div class="col-sm-8"  id="special">
+          <h2 class="mt-4 phead">Nuestra vocación:</h2>
+          <p class="plead">Buscamos satisfacer las necesidades de nuestros clientes mediante una rápida y oportuna atención, ofreciendo servicios de suministro, alquiler o venta de equipos, unidades y repuestos. Todo lo necesario para cualquier exploración petrolera o de hidrocarburos</p>
+          <p class="plead">Prestamos los mejores servicios de ingeniería y procura; abarcando los sectores de petróleo, gas y petroquímica, siempre con los mas altos estándares de calidad y seguridad. Con el compromiso de mantener un continuo desarrollo en nuestra organización, conformada por hombres y mujeres con un alto espíritu de colaboración y perseverancia.</p>
           <p>
-            <a class="btn btn-primary btn-lg" href="#">Call to Action &raquo;</a>
+            <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Solicita asistencia</a>
           </p>
         </div>
-        <div class="col-sm-4">
-          <h2 class="mt-4">Contact Us</h2>
-          <address>
-            <strong>Start Bootstrap</strong>
-            <br>3481 Melrose Place
-            <br>Beverly Hills, CA 90210
+        <div class="col-sm-4" id="specialc">
+          <h2 class="mt-4 chead">Contáctanos:</h2>
+          <address class="clead">
+            <strong>Power Petroleum de Venezuela</strong>
+            <br>CR 7, entre calles 4 y 5
+            <br>Local Nro Ofic-04
+            <br>El Morro, Lechería
+            <br> Edo. Anzoátegui 6016
             <br>
           </address>
-          <address>
-            <abbr title="Phone">P:</abbr>
+          <address class="clead">
+            <abbr title="Phone">Tel:</abbr>
             (123) 456-7890
             <br>
             <abbr title="Email">E:</abbr>
-            <a href="mailto:#">name@example.com</a>
+            <a href="mailto:powerpetroleumdevenezuela@gmail.com">powerpetroleumdevenezuela@gmail.com</a>
           </address>
         </div>
       </div>
@@ -112,7 +114,7 @@
       <div class="row">
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+            <img class="card-img-top" src="img/pic1.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Card title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
@@ -124,7 +126,7 @@
         </div>
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+            <img class="card-img-top" src="img/pic2.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Card title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
@@ -136,7 +138,7 @@
         </div>
         <div class="col-sm-4 my-4">
           <div class="card">
-            <img class="card-img-top" src="http://placehold.it/300x200" alt="">
+            <img class="card-img-top" src="img/pic3.jpg" alt="">
             <div class="card-body">
               <h4 class="card-title">Card title</h4>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
