--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="my-navbar">
       <div class="container">
         <a class="navbar-brand" href="#"><img class="logo" src="img/logo.png" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,18 +31,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item ">
-              <a class="nav-link active" href="#">Home
+            <li class="nav-item active">
+              <a class="nav-link" href="#home">Home
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#about">Nosotros</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
+              <a class="nav-link" href="#services">Servicios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModal">Contacto</a>
             </li>
           </ul>
         </div>
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Header with Background Image -->
-    <header class="business-header">
+    <header class="business-header" id="home">
       
       <div class="container">
           <div class="fadein">
@@ -81,13 +81,13 @@
     <!-- Page Content -->
     <div class="container">
 
-      <div class="row">
+      <div class="row" id="about">
         <div class="col-sm-8"  id="special">
           <h2 class="mt-4 phead">Nuestra vocación:</h2>
           <p class="plead">Buscamos satisfacer las necesidades de nuestros clientes mediante una rápida y oportuna atención, ofreciendo servicios de suministro, alquiler o venta de equipos, unidades y repuestos. Todo lo necesario para cualquier exploración petrolera o de hidrocarburos</p>
           <p class="plead">Prestamos los mejores servicios de ingeniería y procura; abarcando los sectores de petróleo, gas y petroquímica, siempre con los mas altos estándares de calidad y seguridad. Con el compromiso de mantener un continuo desarrollo en nuestra organización, conformada por hombres y mujeres con un alto espíritu de colaboración y perseverancia.</p>
           <p>
-            <a class="btn btn-primary btn-lg" href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Solicita asistencia</a>
+            <a class="btn btn-primary btn-lg" href="#" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Solicita asistencia</a>
           </p>
         </div>
         <div class="col-sm-4" id="specialc">
@@ -111,40 +111,40 @@
       </div>
       <!-- /.row -->
 
-      <div class="row">
+      <div class="row" id="services">
         <div class="col-sm-4 my-4">
-          <div class="card">
+          <div class="card text-center c1">
             <img class="card-img-top" src="img/pic1.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
+              <h4 class="card-title">Hacemos mantenimientos generales</h4>
+              <p class="card-text">No permitas que tus instalaciones se deterioren, tenemos para su organización la mejor de las asistencias en mantenimientos generales</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-address-card" aria-hidden="true"></i> Contáctenos</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4 my-4">
-          <div class="card">
+          <div class="card text-center c2">
             <img class="card-img-top" src="img/pic2.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
+              <h4 class="card-title">Servicios a instalaciones petroleras</h4>
+              <p class="card-text">Le asistimos técnica y profesionalmente en operaciones de petróleo, gas y petroquímica. Le proveemos de los instrumentos necesarios para su operación o exploración</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-info-circle" aria-hidden="true"></i> Sepa más.</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4 my-4">
-          <div class="card">
+          <div class="card text-center c3">
             <img class="card-img-top" src="img/pic3.jpg" alt="">
             <div class="card-body">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
+              <h4 class="card-title">Atención a exploraciones remotas y en altamar</h4>
+              <p class="card-text">Tenemos a su disposición, una gran variedad tipo de piezas, refacciones y servicios disponibles para su taladro o pozo petrolero</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary">Find Out More!</a>
+              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-question-circle" aria-hidden="true"></i> Solicitar Atención</a>
             </div>
           </div>
         </div>
@@ -163,9 +163,55 @@
       <!-- /.container -->
     </footer>
 
+    <!-- MODAL DE CONTACTO -->
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Información de Contacto</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+              <div class="container">
+                  <div class="row">
+                    <div class="col-lg-8 mx-auto text-center">
+                      <h2 class="section-heading">Pongámonos en contacto</h2>
+                      <hr class="my-4">
+                      <p class="mb-5">¿Estás en la busqueda de proveedores de alguno de los productos o servicios que ofrecemos?</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-4 ml-auto text-center">
+                      <i class="fa fa-mobile fa-3x mb-3 sr-contact"></i>
+                      <p>0414-393-5591</p>
+                    </div>
+                    <div class="col-lg-4 ml-auto text-center">
+                      <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
+                      <p>0281-281-3347</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto text-center">
+                      <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
+                      <p>
+                        <a href="mailto:delsurzubirreta@gmail.com">delsurzubirreta@gmail.com</a>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/scrollreveal/dist/scrollreveal.js"></script>
     <script src="js/script.js"></script>
   </body>
 
