--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <p class="card-text">No permitas que tus instalaciones se deterioren, tenemos para su organización la mejor de las asistencias en mantenimientos generales</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-address-card" aria-hidden="true"></i> Contáctenos</a>
+              <a href="#" class="btn btn-primary contacts" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-address-card" aria-hidden="true"></i> Contáctenos</a>
             </div>
           </div>
         </div>
@@ -132,7 +132,7 @@
               <p class="card-text">Le asistimos técnica y profesionalmente en operaciones de petróleo, gas y petroquímica. Le proveemos de los instrumentos necesarios para su operación o exploración</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-info-circle" aria-hidden="true"></i> Sepa más.</a>
+              <a href="#" class="btn btn-primary contacts" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-info-circle" aria-hidden="true"></i> Sepa más.</a>
             </div>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <p class="card-text">Tenemos a su disposición, una gran variedad tipo de piezas, refacciones y servicios disponibles para su taladro o pozo petrolero</p>
             </div>
             <div class="card-footer">
-              <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-question-circle" aria-hidden="true"></i> Solicitar Atención</a>
+              <a href="#" class="btn btn-primary contacts" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-question-circle" aria-hidden="true"></i> Solicitar Atención</a>
             </div>
           </div>
         </div>
@@ -195,7 +195,7 @@
                     <div class="col-lg-4 mr-auto text-center">
                       <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
                       <p>
-                        <a href="mailto:delsurzubirreta@gmail.com">delsurzubirreta@gmail.com</a>
+                        <a href="mailto:powerpetroleumdevenezuela@gmail.com">powerpetroleumdevenezuela@gmail.com</a>
                       </p>
                     </div>
                   </div>
