--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
+        <div class="modal-content esp">
           <div class="modal-header">
             <h5 class="modal-title" id="exampleModalLabel">Información de Contacto</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
