--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+        <p class="m-0 text-center text-white">Copyright &copy; Power Petroleum de Venezuela 2017</p>
       </div>
       <!-- /.container -->
     </footer>
