--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="picture2">
                     <h1 class="display-3 text-center text-white mt-4">Entregamos a tiempo y de manera responsable</h1>
                     <hr>
-                    <h3 class="text-center text-white">Nuestro equipo de trabajo está altamente motivado e identificado con la organización, por lo cual podemos garantizar una respuesta aceptada y oportuna</h3>
+                    <h3 class="text-center text-white">Nuestro equipo de trabajo está altamente motivado e identificado con la organización, por lo cual podemos garantizar una respuesta acertada y oportuna</h3>
                   </div>
           </div>
       
