--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
         </div>
       </div>
     </div>
+    <div style="display:none;"></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
