--- a/index.html
+++ b/index.html
@@ -314,12 +314,11 @@
         </div>
       </div>
     </div>
-    <div style="display:none;"></div>
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+    <script src="vendor/scrollreveal.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
